@@ -1,3 +1,7 @@
+R1.0.0    October 29, 2018  Kukhee Kim (KHKIM)
+          force tag!
+          add evrTimePutPulseID() and its implementaiton
+
 R1.0.0    June 29, 2018     Kukhee Kim (KHKIM)
           force tag!!
           change bo record labels to "Enabled"/"Disabled"
